--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ langchain-google-genai
 sentence-transformers
 faiss-cpu
 PyPDF2
-google-generativeai
+google-generativeai==0.7.2
 pydantic
 python-multipart
 aiofiles
